[package]
name = "runtime-land-js"
version = "0.5.0-beta.2"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
http = "1.1.0"
land-sdk = { workspace = true }
once_cell = "1.19.0"
rquickjs = { version = "0.6.2", features = [
    "array-buffer",
    "macro",
    "parallel",
    "loader",
] }
wit-bindgen = "0.29.0"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["tests/test-runner"]

[workspace.dependencies]
land-sdk = { git = "https://github.com/fuxiaohei/runtime-land", branch = "dev" }
anyhow = "1.0.86"
