[package]
name = "runtime-land-js"
version = { workspace = true }
edition = "2021"

[dependencies]
anyhow = { workspace = true }
http = "1.1.0"
land-sdk = { workspace = true }
once_cell = "1.19.0"
rquickjs = { version = "0.6.2", features = [
    "array-buffer",
    "macro",
    "parallel",
    "loader",
] }
wit-bindgen = "0.30.0"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["tests/test-runner"]

[workspace.package]
version = "0.5.0-rc.2"

[workspace.dependencies]
land-sdk = { git = "https://github.com/fuxiaohei/runtime-land", branch = "dev" }
land-wasm-gen = { git = "https://github.com/fuxiaohei/runtime-land", branch = "dev" }
land-wasm-server = { git = "https://github.com/fuxiaohei/runtime-land", branch = "dev" }
#land-sdk = { path = "../runtime-land/lib/sdk" }
#land-wasm-gen = { path = "../runtime-land/lib/wasm-gen" }
#land-wasm-server =  { path = "../runtime-land/lib/wasm-server" }
anyhow = "1.0.86"
