[package]
name = "test-runner"
version = "0.5.0-beta.2"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.15", features = ["derive", "env"] }
color-print = "0.3.6"
land-wasm-gen = { git = "https://github.com/fuxiaohei/runtime-land", branch = "dev" }
land-wasm-server = { git = "https://github.com/fuxiaohei/runtime-land", branch = "dev" }
tokio = { version = "1.39.2", features = [
    "rt",
    "macros",
    "time",
    "test-util",
    "rt-multi-thread",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "stream",
    "rustls-tls",
    "json",
] }
